@@ -1,4 +1,14 @@
-### Publish data directory Add environment variable in dockerfile (HEAD -> main)
+### Fix typo Fix path to get the WKTs (HEAD -> main)
+>Thu, 8 Jul 2021 13:21:49 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Publish data directory Add environment variable in dockerfile (origin/main)
 >Thu, 8 Jul 2021 13:05:11 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix text in Makefile Fix date in build.sh (origin/main)
+### Fix text in Makefile Fix date in build.sh
 >Thu, 8 Jul 2021 12:16:35 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
